FullQa New/src/objects/Connector__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Director_Ding_Budget__c</fullName>
        <label>Sales Director Ding Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Owner: Partner Launch - Sara Simrell</description>
        <label>Sales Engineer Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Field_Ding_Quota__c</fullName>
        <label>Sales Field Ding Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>(Deprecated) Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eComm</fullName>
                </value>
                <value>
                    <fullName>Emerging ERP</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>VSB</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>MISC</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>eComm West 1</fullName>
                </value>
                <value>
                    <fullName>eComm West 2</fullName>
                </value>
                <value>
                    <fullName>eComm East 1</fullName>
                </value>
                <value>
                    <fullName>eComm East 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Level__c</fullName>
        <description>Sales level designation to determine size of potential opportunities, pulled on to the Opportunity record to determine routing direct to RSMs
Level 1
Integrated: Yes, used in formula field on opportunity and used for distribution engine routing to teams
Owner: Jay Deubler/Katie Pelly</description>
        <inlineHelpText>Used by Distribution Engine to route opportunities created by Inside Sales. Values were determined by Sales Leaders.</inlineHelpText>
        <label>Sales Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMALL</fullName>
                </value>
                <value>
                    <fullName>MID</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>UNK/API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Quota_Bookings__c</fullName>
        <formula>ASP_Budget__c *  Sales_Field_Ding_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Quota Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Training_Account_Date__c</fullName>
        <label>Sales Training Account Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Training_Partner_Date__c</fullName>
        <label>Sales Training Partner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SlugUpdate__c</fullName>
        <formula>SUBSTITUTE(LOWER(Marketplace_Name__c), &quot; &quot;, &quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SlugUpdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slug__c</fullName>
        <inlineHelpText>Think of this as the web site filename, avalara.com/integrations/slug — NOT to be changed after initial publication.</inlineHelpText>
        <label>Slug</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Solution_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors (Solution Provider)</relationshipLabel>
        <relationshipName>Connectors4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>X30_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Delayed by Partner</fullName>
                </value>
                <value>
                    <fullName>Existing - Not Certified</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Partner_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated Level 1 : Process Builder</description>
        <inlineHelpText>Suppresses the SAM/PPM split on the opportunity for a given connector</inlineHelpText>
        <label>Suppress Partner Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAM_Total_Addressable_Market__c</fullName>
        <description>Purpose: Track 30 day delta between old calc estimation and new calc estimation 
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the Total Addressable Market specific to this connector</inlineHelpText>
        <label>Connector TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEST_RTF_Body__c</fullName>
        <label>TEST RTF Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tagline__c</fullName>
        <inlineHelpText>Goes underneath integration page title of the format, &quot;Acumatica and Avalara AvaTax: Built in Sales Tax Accuracy”  or  &quot;Vineyard2door and Avalara AvaTax: Automated Sales Tax Calculation for the Wine Industry”</inlineHelpText>
        <label>Tagline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Teeter__c</fullName>
        <label>Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Success_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp Success Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnManaged_Connector__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Track whether or not this connector should be considered an &quot;unmanaged&quot; connector for reporting and workflow exclusion purposes.
Integrated: No 
Change: Level 0 
Custodian: Golive Director</description>
        <inlineHelpText>Designate this connector as unmanaged for generic, placeholder, or non standard connectors that should be excluded from reporting and key connector onboarding activities.</inlineHelpText>
        <label>UnManaged Connector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unpublished_Version_In_Dev__c</fullName>
        <label>Unpublished Version In Dev</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vibrancy_Active_Date__c</fullName>
        <inlineHelpText>The date the connector was made Active.</inlineHelpText>
        <label>Launch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vibrancy_Change_Date__c</fullName>
        <description>used to record when the vibrancy of a field is changed</description>
        <label>Vibrancy Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vibrancy_Prior_Value__c</fullName>
        <description>Purpose: To track the previous vibrancy value
Integration: Yes
Change Level: 1
Custodian: Robin Conner/Marketing

https://avalara.atlassian.net/browse/SFCOM-8018</description>
        <label>Vibrancy Prior Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vibrancy__c</fullName>
        <description>Purpose: Track 30 day delta between old calc estimation and new calc estimation 
Integrated: No 
Change: Level 0 
Custodian: VP Business Development</description>
        <inlineHelpText>The current vibrancy category of this connector relative to their engagement level indicating active (Sales), inactive(SAM) or revive(BiZdev).</inlineHelpText>
        <label>Vibrancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Established</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Kit Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_papers_the_agreement__c</fullName>
        <label>Who papers the agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Certification_Date__c</fullName>
        <description>Purpose: Track the 1st certification date of any related version
Integrated: No 
Change: Level 0 
Custodian: OEM onbaording team</description>
        <inlineHelpText>Rollup field that identifies the first version certified this connector implying overall certification of the connector</inlineHelpText>
        <label>1st Certification Date</label>
        <summarizedField>Version__c.Date_Certified_Release__c</summarizedField>
        <summaryForeignKey>Version__c.Connector__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2014_ASP__c</fullName>
        <formula>IF(Sales_Actual_Dings__c &gt; 0, X2014_Actual_Bookings__c /  Sales_Actual_Dings__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2014 ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Actual_Bookings__c</fullName>
        <label>2014  Actual Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_ASP_Budget__c</fullName>
        <description>Historical tracking of the ASP budget which is used to calculate the2015 Sales Budget Bookings
INtegrated: No but used in a formula
Owner: Liz Anderson via PV</description>
        <label>2015 ASP Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Bookings__c</fullName>
        <label>2015 Actual Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Sales_Budget_Bookings__c</fullName>
        <formula>X2015_ASP_Budget__c *  X2015_Sales_Director_Ding_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 Sales Budget Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Sales_Director_Ding_Budget__c</fullName>
        <description>Populated via accounting spreadsheet, used to track historical value for Ding Budget
used in formula to calculate the 2015 Sales Budget Bookings
Owner: Liz Anderson via PVD</description>
        <label>2015 Sales Director Ding Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2016ActualBookings__c</fullName>
        <label>2016 Actual Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Budget_ASP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2016 Budget ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2017_Bookings_Budget__c</fullName>
        <label>2017 Bookings Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2017_Dings_Budget__c</fullName>
        <label>2017 Dings Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2017_YTD_Opp_Actual__c</fullName>
        <label>2017 YTD Opp Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_Increase__c</fullName>
        <formula>IF(X2016ActualBookings__c = 0, 0,FY_Actual_Bookings__c / X2016ActualBookings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY % Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Opp_Target__c</fullName>
        <label>2017 YTD Opp Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Connector</label>
    <listViews>
        <fullName>AIP_Enabled_Platform</fullName>
        <columns>NAME</columns>
        <columns>Vibrancy__c</columns>
        <columns>Routing_Partner_Group__c</columns>
        <columns>Partner_Team_Grouping__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Default_Self_Serve__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AIP_Enabled_Platform__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AIP Enabled Platform</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Connector_Certification_Date__c</columns>
        <columns>Sales_Group__c</columns>
        <columns>Managed_By__c</columns>
        <columns>Default_Self_Serve__c</columns>
        <columns>X1st_Certification_Date__c</columns>
        <columns>Connector_Setup_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Group__c</field>
            <operation>equals</operation>
            <value>Microsoft,Sage</value>
        </filters>
        <label>ERP Connectors</label>
    </listViews>
    <listViews>
        <fullName>All_Connectors2</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Managed_By__c</columns>
        <columns>Platform_Cateogry__c</columns>
        <columns>Implementation_Team__c</columns>
        <columns>Integration_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Team__c</field>
            <operation>equals</operation>
            <value>ECOMM</value>
        </filters>
        <label>Oracle Commerce Cloud</label>
    </listViews>
    <listViews>
        <fullName>All_Connectors4</fullName>
        <columns>NAME</columns>
        <columns>Vibrancy__c</columns>
        <columns>Application__c</columns>
        <columns>Channel_Availability__c</columns>
        <columns>Marketing_Business_Segment__c</columns>
        <columns>Marketing_SubType__c</columns>
        <columns>UnManaged_Connector__c</columns>
        <columns>Sales_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vibrancy__c</field>
            <operation>notEqual</operation>
            <value>Retired,Error</value>
        </filters>
        <label>All Connectors</label>
    </listViews>
    <listViews>
        <fullName>Art_Duke_s_Connectors</fullName>
        <columns>NAME</columns>
        <columns>Default_Self_Serve__c</columns>
        <columns>PPM__c</columns>
        <columns>Customer_Base__c</columns>
        <columns>TAM_Total_Addressable_Market__c</columns>
        <columns>Author__c</columns>
        <columns>X1st_Certification_Date__c</columns>
        <columns>Early_Adopter_Sales_Owner__c</columns>
        <columns>SAM__c</columns>
        <columns>Connector_Product_Manager__c</columns>
        <columns>Integration_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>contains</operation>
            <value>Jason Warren</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>(Do not sell)</value>
        </filters>
        <label>Emerging East - Round-Robin Connectors</label>
    </listViews>
    <listViews>
        <fullName>Avalara_Connectors</fullName>
        <columns>NAME</columns>
        <columns>Vibrancy__c</columns>
        <columns>Application__c</columns>
        <columns>Channel_Availability__c</columns>
        <columns>Marketing_Business_Segment__c</columns>
        <columns>Marketing_SubType__c</columns>
        <columns>UnManaged_Connector__c</columns>
        <columns>Sales_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managed_By__c</field>
            <operation>contains</operation>
            <value>Avalara</value>
        </filters>
        <filters>
            <field>Vibrancy__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filters>
        <label>Avalara Connectors</label>
    </listViews>
    <listViews>
        <fullName>Brandon_Cole_s_Connectors</fullName>
        <columns>NAME</columns>
        <columns>Platform_Cateogry__c</columns>
        <columns>Default_Self_Serve__c</columns>
        <columns>Connector_Type__c</columns>
        <columns>No_Closed_Won_Opps__c</columns>
        <columns>PPM__c</columns>
        <columns>Customer_Base__c</columns>
        <columns>PLT_Owner__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Author__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>equals</operation>
            <value>Brandon Cole</value>
        </filters>
        <filters>
            <field>Vibrancy__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filters>
        <label>Brandon Cole&apos;s Connectors</label>
    </listViews>
    <listViews>
        <fullName>Brian_McNeely_s_Connectors1</fullName>
        <columns>NAME</columns>
        <columns>Platform_Cateogry__c</columns>
        <columns>Default_Self_Serve__c</columns>
        <columns>Connector_Type__c</columns>
        <columns>No_Closed_Won_Opps__c</columns>
        <columns>Sales_Level__c</columns>
        <columns>PPM__c</columns>
        <columns>TAM_Total_Addressable_Market__c</columns>
        <columns>Customer_Base__c</columns>
        <columns>PLT_Owner__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>equals</operation>
            <value>Brian McNeely</value>
        </filters>
        <filters>
            <field>Vibrancy__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filters>
        <label>Brian McNeely&apos;s Connectors</label>
    </listViews>
    <listViews>
        <fullName>Connectors2</fullName>
        <columns>NAME</columns>
        <columns>Account_Signed__c</columns>
        <columns>Connector_Type__c</columns>
        <columns>Integration_Category__c</columns>
        <columns>Platform_Cateogry__c</columns>
        <columns>Pricing_Schedule__c</columns>
        <filterScope>Everything</filterScope>
        <label>Connectors</label>
    </listViews>
    <listViews>
        <fullName>Connectors_Active_New_Revive_only</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Sales_Group__c</columns>
        <columns>Vibrancy__c</columns>
        <columns>Slug__c</columns>
        <columns>Platform_Cateogry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vibrancy__c</field>
            <operation>equals</operation>
            <value>New,Active,Revive</value>
        </filters>
        <label>Connectors - Active,New,Revive only</label>
    </listViews>
    <listViews>
        <fullName>Ecommerce_Connectors_Published</fullName>
        <columns>NAME</columns>
        <columns>Sales_Group__c</columns>
        <columns>X1st_Certification_Date__c</columns>
        <columns>Connector_Certification_Date__c</columns>
        <columns>Publish__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Business_Segment__c</field>
            <operation>equals</operation>
            <value>Ecommerce/SDK</value>
        </filters>
        <label>Ecommerce Connectors Published</label>
    </listViews>
    <listViews>
        <fullName>Emerging_Connectors1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Early_Adopter_Sales_Owner__c</columns>
        <columns>DSPWebsite__c</columns>
        <columns>Customer_Base__c</columns>
        <columns>Vibrancy__c</columns>
        <columns>Integration_Category__c</columns>
        <columns>Connector_Managed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>contains</operation>
            <value>pell,cole,foster,bourne,mcneely,moses,warren,knowlton,grew,mjelde,sims</value>
        </filters>
        <filters>
            <field>Vibrancy__c</field>
            <operation>notEqual</operation>
            <value>Retired,Error</value>
        </filters>
        <filters>
            <field>Pricing_Schedule__c</field>
            <operation>notEqual</operation>
            <value>ZT,Non Connector Fees,AvaTax SoHo</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>quickbooks,shopify,mozu</value>
        </filters>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>notContain</operation>
            <value>clayton,darryl</value>
        </filters>
        <filters>
            <field>Connector_Type__c</field>
            <operation>notEqual</operation>
            <value>SOHO</value>
        </filters>
        <label>Emerging Connectors</label>
    </listViews>
    <listViews>
        <fullName>Erin_M_s_Connectors</fullName>
        <columns>NAME</columns>
        <columns>Default_Self_Serve__c</columns>
        <columns>PPM__c</columns>
        <columns>Connector_Type__c</columns>
        <columns>Platform_Cateogry__c</columns>
        <columns>Customer_Base__c</columns>
        <columns>No_Closed_Won_Opps__c</columns>
        <columns>Sales_Level__c</columns>
        <columns>PLT_Owner__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Author__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>equals</operation>
            <value>Sarah Bourne</value>
        </filters>
        <filters>
            <field>Vibrancy__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filters>
        <label>Sarah B&apos;s Connectors</label>
    </listViews>
    <listViews>
        <fullName>Erin_M_s_Connectors1</fullName>
        <columns>NAME</columns>
        <columns>Default_Self_Serve__c</columns>
        <columns>PLT_Owner__c</columns>
        <columns>Author__c</columns>
        <columns>X1st_Certification_Date__c</columns>
        <columns>X2015_Bookings__c</columns>
        <columns>X2016ActualBookings__c</columns>
        <columns>X2017_YTD_Opp_Actual__c</columns>
        <columns>Integration_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Early_Adopter_Sales_Owner__c</field>
            <operation>contains</operation>
            <value>mjelde</value>
        </filters>
        <filters>
            <field>Vibrancy__c</field>
            <operation>contains</operation>
            <value>Emerging,Active</value>
        </filters>
        <label>Erin M&apos;s Connectors</label>
    </listViews>
    <listViews>
        <fullName>Established</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vibrancy__c</field>
            <operation>equals</operation>
            <value>Established,Marketing</value>
        </filters>
        <label>Established</label>
    </listViews>
    <nameField>
        <label>Connector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>